# tree-sitter-red

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  build.bat  check-files.red  example-file  example.red  example.txt  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-red.pc.in
bindings/c/tree_sitter/: tree-sitter-red.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_red/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterRedTests/: TreeSitterRedTests.swift
queries/: folds.scm  highlights.scm  indents.scm  locals.scm  outline.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: literal.txt
