[package]
name = "tree-sitter-red"
description = "A tree-sitter grammar for the Red programming language"
version = "0.1.1"
authors = ["qtxie <xqtxyz@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "red"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/qtxie/tree-sitter-red"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
